--- a/AndrewSeltzer_Lab_1.ipynb
+++ b/AndrewSeltzer_Lab_1.ipynb
@@ -61,7 +61,7 @@
       "metadata": {
         "id": "5jk_lQhz0T87"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1314,7 +1314,7 @@
           "height": 295
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1333,17 +1333,19 @@
     {
       "cell_type": "code",
       "source": [
-        "x=10,-10"
+        "x = np.linspace(-10,10)"
       ],
       "metadata": {
         "id": "2Su5-Os_pE7j"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "x"
+      ],
       "metadata": {
         "id": "xHx6ZcQSpFER"
       },
@@ -1352,7 +1354,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "y = 10*x+7"
+      ],
       "metadata": {
         "id": "M_zhD1lepFJ_"
       },
