--- a/Andrew Seltzer_2023_Lab_1.ipynb
+++ b/Andrew Seltzer_2023_Lab_1.ipynb
@@ -1297,9 +1297,95 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "x = np.arange(-10,10)\n",
+        "y = 10*x + 7\n",
+        "\n",
+        "plt.plot(x,y)\n",
+        "plt.title(r'$y = 10x+7$', fontsize=20)\n",
+        "\n",
+        "plt.show()"
+      ],
       "metadata": {
-        "id": "jiYuQxe_39ct"
+        "id": "FVeNon6RbCq4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "x = np.arange(-10,10)\n",
+        "y = y = -3*x-12\n",
+        "\n",
+        "plt.plot(x,y)\n",
+        "plt.title(r'$y = -3x+12$', fontsize=20)\n",
+        "\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "XkcHPtsiblIe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "x = np.arange(-10,10)\n",
+        "y = np.sin(x)\n",
+        "\n",
+        "plt.plot(x,y)\n",
+        "plt.title(r'$y =/sin(x)$', fontsize=20)\n",
+        "\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "cC-KAfjRcG7-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "x = np.arange(-10,10)\n",
+        "y = np.exp(x)\n",
+        "\n",
+        "plt.plot(x,y)\n",
+        "plt.title(r'$y=e^x$', fontsize=20)\n",
+        "\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "jV5p6_zlcd65"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "x = np.arange(-10,10)\n",
+        "y = np.exp(-x**2)\n",
+        "\n",
+        "plt.plot(x,y)\n",
+        "plt.title(r'$y=e^(-x^2)$', fontsize=20)\n",
+        "\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "OhRRUUptcz-h"
       },
       "execution_count": null,
       "outputs": []
