--- a/Andrew_Seltzer_Midterm.ipynb
+++ b/Andrew_Seltzer_Midterm.ipynb
@@ -59,6 +59,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "#pyplot is matplotlib's plotting framework which takes the specific import line merely imports the module \"matplotlib.pyplot\" and binds that to the name \"plt\"."
+      ],
+      "metadata": {
+        "id": "kQKJstZSOxuO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Part 1: Getting your data\n",
         "\n",
         "Create a google form to input your data.\n",
@@ -86,6 +95,17 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#plate diameter=4 Circumrance = 25.12\n",
+        "#placemat diameter = 7.5 circumrance = 47.1\n",
+        "#Bowl diameter = 3.5 circumrance = 21.98\n"
+      ],
+      "metadata": {
+        "id": "_SjHEsd4SJLs"
+      }
     },
     {
       "cell_type": "markdown",
