--- a/Andrew_Seltzer_Midterm.ipynb
+++ b/Andrew_Seltzer_Midterm.ipynb
@@ -353,11 +353,11 @@
         "best_loss"
       ],
       "metadata": {
-        "id": "ORPY78bvu78D",
-        "outputId": "9c0082f7-3e66-4307-a47c-2631270856fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ORPY78bvu78D",
+        "outputId": "9c0082f7-3e66-4307-a47c-2631270856fd"
       },
       "execution_count": 46,
       "outputs": [
@@ -404,11 +404,11 @@
       ],
       "metadata": {
         "id": "xe8G9X7DqACm",
-        "outputId": "9d6eaf74-994f-423f-a53d-eeeb53a3347a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        }
+        },
+        "outputId": "9d6eaf74-994f-423f-a53d-eeeb53a3347a"
       },
       "execution_count": 51,
       "outputs": [
@@ -470,7 +470,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "In the slope intercept form m is the slope of the line and b is the intercept."
+      ],
       "metadata": {
         "id": "OC_Ja53Yugfn"
       }
@@ -488,7 +490,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "y=6.33x-0.20 so the m value is 6.33 and the b value is 0.20"
+      ],
       "metadata": {
         "id": "Te_52DvOuhZ-"
       }
@@ -506,7 +510,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Yes it makes sense to include b in the parameters because without b you wouldnt be able to solve the question "
+      ],
       "metadata": {
         "id": "F0gbHr8_uiWi"
       }
