--- a/Andrew_Seltzer_Midterm.ipynb
+++ b/Andrew_Seltzer_Midterm.ipynb
@@ -53,7 +53,7 @@
       "metadata": {
         "id": "ZE7xzRUigBYy"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -93,7 +93,7 @@
       "metadata": {
         "id": "B0XQVmQIgdrp"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -125,7 +125,7 @@
       "metadata": {
         "id": "PfAztwghjql2"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -136,7 +136,7 @@
       "metadata": {
         "id": "_SA4UhnqjyhY"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -146,12 +146,12 @@
       ],
       "metadata": {
         "id": "wG-6zwRCop6x",
-        "outputId": "3317ef75-95e0-4abf-c542-df143e068bff",
+        "outputId": "c8b8862b-1bbc-4666-b22a-c2de61fdb91c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -161,7 +161,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 6
         }
       ]
     },
@@ -172,12 +172,12 @@
       ],
       "metadata": {
         "id": "DGL5_DXjnQ9_",
-        "outputId": "de96a0ce-70b2-4a17-dcfc-69574134aa31",
+        "outputId": "a7253007-1805-4eb3-d380-200e245ae65f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -190,7 +190,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 7
         }
       ]
     },
@@ -201,12 +201,12 @@
       ],
       "metadata": {
         "id": "nrWM30TDnlzP",
-        "outputId": "662930ff-5429-4467-a736-8f3883e4c91a",
+        "outputId": "51a9dec8-7899-449f-94c3-740abff03fbb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -219,7 +219,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 8
         }
       ]
     },
@@ -232,7 +232,7 @@
       "metadata": {
         "id": "HwjOm5sgj2JA"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -260,9 +260,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "b3dd1c9b-aee0-4689-d7ad-5ab9cc10a7d5"
+        "outputId": "a0caa2ad-5e60-4e60-d7d8-603f6d6a8e42"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -295,7 +295,7 @@
       "metadata": {
         "id": "CygZLNigqQ6j"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -306,7 +306,7 @@
       "metadata": {
         "id": "oKiCHL26qY6L"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -344,7 +344,7 @@
       "metadata": {
         "id": "KZn5uJ31nk4X"
       },
-      "execution_count": 45,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -357,9 +357,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ORPY78bvu78D",
-        "outputId": "9c0082f7-3e66-4307-a47c-2631270856fd"
+        "outputId": "21c4bf79-7ed9-4e58-c285-2d5f31cbdb67"
       },
-      "execution_count": 46,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -369,7 +369,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 14
         }
       ]
     },
@@ -408,9 +408,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "9d6eaf74-994f-423f-a53d-eeeb53a3347a"
+        "outputId": "b2067ed0-4fa6-434a-e63e-82e6b3a463c9"
       },
-      "execution_count": 51,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -440,7 +440,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "C is the circumference and D is the diameter "
+        "C is the circumference and D is the diameter and is the relationship of the linear fit of the circle"
       ],
       "metadata": {
         "id": "DuIp18z-wQMo"
